# sana

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.indexer  Dockerfile.mcp-index  GEMINI.md  README.md  config.json  docker-compose.e2e.yml  docker-compose.yml  logs.txt  nginx.conf  patch_indexer.py
.claude/: settings.json
.gemini/: settings.json
.opencode/: opencode.json
conductor/: 01-frontend-state-refactor.md  02-backend-function-decomposition.md  02-frontend-state-refactor-fixes.md  03-backend-function-decomposition.md  03-testing-gaps.md  04-error-handling-resilience.md  04-testing-gaps.md  05-error-handling-resilience.md  05-infrastructure-hardening.md  06-infrastructure-hardening.md  architecture-overview.md  e2e_tests_plan.md  plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss
frontend/src/: attachment_handlers.rs  communication.rs  lib.rs  logic.rs  main.rs  state.rs  stomp.rs  types.rs
frontend/src/components/: attachment.rs  attachment_button.rs  attachment_renderer.rs  auth.rs  chat_window.rs  default_attachment.rs  image_attachment.rs  image_lightbox.rs  join_channel_modal.rs  mod.rs  profile_menu.rs  sidebar.rs
frontend/src/hooks/: mod.rs  use_auth_check.rs  use_channels.rs  use_chat_scroll.rs  use_chat_websocket.rs
frontend/src/services/: attachment.rs  mod.rs  websocket.rs
frontend/tests/: attachment_handlers_tests.rs  hooks_tests.rs  logic_tests.rs  state_tests.rs  stomp_tests.rs  websocket_service_tests.rs
migrations/: 20260227000000_create_users.sql  20260228000001_create_messages.sql  20260301000002_add_channels_and_update_messages.sql  20260301000003_add_channel_joins.sql  20260314161225_rename_channel_joins_and_add_read_marker.sql  20260314195500_add_message_type_enum.sql  (+2 more)
(+136 files in other folders)
