[package]
name = "sana"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "frontend",
]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-nats = "0.33"
bytes = "1.11.1"
tower-http = { version = "0.5", features = ["fs", "trace"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
indoc = "2.0"
