[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
gloo-console = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-events = "0.2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
futures = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlElement", "Element"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
yew-router = "0.18.0"
